import "common.proto";
//商城购买请求 command:1510
message ArenaShopRequest
{
    required int32 id = 1; // 对应shop配置表中商品编号
}
//获取商城列表 command:1511
message GetShopItemsResponse
{
    required CommonResponse res = 1;
    repeated int32 id = 2;
}
//商城购买响应 command:1512
message ArenaShopResponse
{
    required CommonResponse res = 1;
    required GameResourcesResponse consume = 2;
    required GameResourcesResponse gain = 3;
}
